--- a/.gitignore
+++ b/.gitignore
@@ -1,148 +1,91 @@
-# User-specific stuff
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/dictionaries
-.idea/**/shelf
+HELP.md
+.gradle
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**
+!**/src/test/**
 
-# AWS User-specific
-.idea/**/aws.xml
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
 
-# Generated files
-.idea/**/contentModel.xml
-
-# Sensitive or high-churn files
-.idea/**/dataSources/
-.idea/**/dataSources.ids
-.idea/**/dataSources.local.xml
-.idea/**/sqlDataSources.xml
-.idea/**/dynamic.xml
-.idea/**/uiDesigner.xml
-.idea/**/dbnavigator.xml
-
-# Gradle
-.idea/**/gradle.xml
-.idea/**/libraries
-
-# Gradle and Maven with auto-import
-# .idea/artifacts
-# .idea/compiler.xml
-# .idea/jarRepositories.xml
-# .idea/modules.xml
-# .idea/*.iml
-# .idea/modules
-# *.iml
-# *.ipr
-
-# CMake
-cmake-build-*/
-
-# Mongo Explorer plugin
-.idea/**/mongoSettings.xml
-
-# File-based project format
+### IntelliJ IDEA ###
+.idea
 *.iws
-
-# IntelliJ
+*.iml
+*.ipr
 out/
 
-# mpeltonen/sbt-idea plugin
-.idea_modules/
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
 
-# JIRA plugin
-atlassian-ide-plugin.xml
+### VS Code ###
+.vscode/
 
-# Cursive Clojure plugin
-.idea/replstate.xml
+### macOS ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
 
-# SonarLint plugin
-.idea/sonarlint/
+# Icon must end with two \r
+Icon
 
-# Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-fabric.properties
 
-# Editor-based Rest Client
-.idea/httpRequests
+# Thumbnails
+._*
 
-# Android studio 3.1+ serialized cache file
-.idea/caches/build_file_checksums.ser
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
 
-# *.iml
-# modules.xml
-# .idea/misc.xml
-# *.ipr
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
 
-# Sonarlint plugin
-.idea/**/sonarlint/
+### macOS Patch ###
+# iCloud generated files
+*.icloud
 
-# SonarQube Plugin
-.idea/**/sonarIssues.xml
+### Windows ###
+# Windows thumbnail cache files
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
 
-# Markdown Navigator plugin
-.idea/**/markdown-navigator.xml
-.idea/**/markdown-navigator-enh.xml
-.idea/**/markdown-navigator/
+# Dump file
+*.stackdump
 
-# Cache file creation bug
-.idea/$CACHE_FILE$
+# Folder config file
+[Dd]esktop.ini
 
-# CodeStream plugin
-.idea/codestream.xml
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
 
-# Azure Toolkit for IntelliJ plugin
-.idea/**/azureSettings.xml
+# Windows Installer files
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
 
-### Java ###
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
-
-### Gradle ###
-.gradle
-**/build/
-!src/**/build/
-
-# Ignore Gradle GUI config
-gradle-app.setting
-
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
-
-# Avoid ignore Gradle wrappper properties
-!gradle-wrapper.properties
-
-# Cache of project
-.gradletasknamecache
-
-# Eclipse Gradle plugin generated files
-.project
-# JDT-specific (Eclipse Java Development Tools)
-.classpath
-
-### Gradle Patch ###
-# Java heap dump
-*.hprof
+# Windows shortcuts
+*.lnk
