chore: build.gradle jwt 추가

--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 	testImplementation 'io.projectreactor:reactor-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	implementation 'org.springdoc:springdoc-openapi-ui:1.5.12'
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 }
 
 tasks.named('bootBuildImage') {
