--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,8 @@ dependencies {
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
 
+	implementation 'org.apache.commons:commons-lang3:3.12.0'
+
 	// implementation 'org.slf4j:slf4j-api:1.7.32'
 	// implementation 'ch.qos.logback:logback-classic:1.2.6'
 }
