--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,5 +66,6 @@ jobs:
             sudo docker pull ${{ secrets.DOCKER_REPO }}
             sudo docker stop stylekey-service || true
             sudo docker rm stylekey-service || true
-            sudo docker run --name=stylekey-service --restart unless-stopped -p 8080:8080 -e TZ=Asia/Seoul -d ${{ secrets.DOCKER_REPO }} 
+            sudo docker run --name=stylekey-service -p 8080:8080 -e TZ=Asia/Seoul -d ${{ secrets.DOCKER_REPO }} 
             sudo docker image prune -f
+
